--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .container {
@@ -10,13 +12,58 @@
 }
 
 .left {
-    height:100%;
+    height: 100%;
     width: 40%;
-    background-image: url();
+    background-image: url("./assets/eric-froehling-3fl4xRSOD6k-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-size: 40vw auto;
 }
 
 .right {
     height: 100%;
     width: 60%;
     background-color: #8E948D;
+    display: flex;
+    flex-direction: column;
+}
+
+.top,
+.form-container,
+.bottom {
+    flex: 1;
+}
+
+.form-container form {
+    height: 100%;
+    width: 100%;
+}
+
+.flex-outer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 64px;
+    
+}
+
+.form-top,
+.form-middle,
+.form-bottom {
+    display: flex;
+    flex-direction: row;
+    column-gap: 48px;
+    padding: 8px 0;
+    
+}
+
+.form-top div,
+.form-middle div,
+.form-bottom div {
+    flex: 1;
+    
+}
+
+input {
+    height: 52px;
+    width: calc(100%);
 }
