--- a/style.css
+++ b/style.css
@@ -2,6 +2,27 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    color: #3A2514;
+}
+
+a {
+    color: #466C84
+}
+
+.top h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-top: 48px;
+    margin-bottom: 16px;
+    padding: 0 64px;
+}
+
+.top p {
+    color: #FFFFFF;
+    font-size: 40px;
+    padding: 0 64px;
+    margin-bottom: 16px;
 }
 
 .container {
@@ -13,15 +34,44 @@
 
 .left {
     height: 100%;
-    width: 40%;
+    flex: 1 0 0;
     background-image: url("./assets/eric-froehling-3fl4xRSOD6k-unsplash.jpg");
     background-repeat: no-repeat;
-    background-size: 40vw auto;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
+.logo h1 {
+    color: #FFFFFF;
+    font-size: 64px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.logo {
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 100%;
+    height: 140px;
+    color: #FFFFFF; 
+    display: flex;
+    flex-direction: row;   
+    align-items: center;
+    justify-content: center;
+    column-gap: 16px;
+}
+
+.credit {
+    position: absolute;
+    top: 95%;
+    color: #FFFFFF;
+    padding: 0 64px;
+    width: 100%
+}
 .right {
     height: 100%;
-    width: 60%;
+    flex: 2 0 0;
     background-color: #8E948D;
     display: flex;
     flex-direction: column;
@@ -33,6 +83,10 @@
     flex: 1;
 }
 
+.form-container {
+    background-color: #D7DBD3;
+}
+
 .form-container form {
     height: 100%;
     width: 100%;
@@ -41,9 +95,10 @@
 .flex-outer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 0 64px;
-    
+    height: 100%;
+    width: 100%
 }
 
 .form-top,
@@ -53,17 +108,44 @@
     flex-direction: row;
     column-gap: 48px;
     padding: 8px 0;
-    
+
 }
 
 .form-top div,
 .form-middle div,
 .form-bottom div {
     flex: 1;
-    
+
+}
+
+button,
+input {
+    color: inherit;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 }
 
 input {
     height: 52px;
     width: calc(100%);
+    padding-left: 14px;
+}
+
+input:focus {
+    border: black solid 2px;
+}
+
+.bottom button {
+    margin: 24px 64px 16px;
+    color: #FFFFFF;
+    background-color: #466C84;
+    padding: 14px 24px;
+    font-weight: bold;
+}
+
+.bottom p {
+    margin: 0 64px 16px;
+    color: #FFFFFF;
 }
